# Lumi

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  dev.sh  pyproject.toml
.github/workflows/: desktop-build.yml
desktop/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/electron/: main.cjs  preload.cjs  updater.cjs
desktop/src/: App.tsx  diff.ts  font.ts  gateway.ts  i18n.ts  index.css  main.tsx  slash.ts  theme.ts  types.ts  update.ts
docs/: agents.md  cache_docs.md  cahce.md  checkpoint.md  config.md  cron.md  grep_glob.md  permissions.md  plan.md  slash_commands.md  styles.md  subagent-approval-rendering.md  summary-flow.md  tui-improvements.md  user-manual.md
docs/architecture/: acp-client.md  acp-progress.md  agents.md  approval-inflight.md  checkpoint.md  cron.md  desktop.md  feishu-minutes.md  feishu.md  hooks.md  memory.md  permissions.md  plan.md  refactor-plan.md  slash-commands.md  styles.md  subagent-rendering.md  summary.md  thinking.md  tui-improvements.md  workflow.md
docs/guides/: agents.md  bash.md  checkpoint.md  config.md  cron.md  feishu.md  grep-glob.md  memory.md  permissions.md  plan.md  read-multimodal.md  slash-commands.md  styles.md
docs/reference/: prompt-caching.md
lumi/: __init__.py  cli.py
lumi/acp/: __init__.py  client.py
lumi/agents/: bridge.py
lumi/api/: app.py
lumi/gateway/: __init__.py  bootstrap.py  broadcast.py  channel.py  channel_rpc.py  cron_rpc.py  cron_stream.py  desktop_delivery.py  mcp_rpc.py  observers.py  project_config.py  projects.py  protocol.py  session.py  session_registry.py  titler.py  uploads.py
lumi/models/: __init__.py  cache.py  catalog.py  chain.py  manager.py  provider_store.py
lumi/prompts/: SUMMARY.md
lumi/server/: __init__.py  cron_rpc.py  desktop_delivery.py  projects.py  protocol.py  ws.py
lumi/sessions/: __init__.py  message_text.py  message_visibility.py  session_meta.py  session_store.py  text_cleaning.py
protocol/: README.md  events.json
scripts/: build-desktop.sh  build-image.sh  migrate_config.py  pyinstaller_entry.py  ws_test.html
tests/: conftest.py  test_agent_delegation_depth.py  test_agent_detector.py  test_ask.py  test_background_task_tool.py  test_bash.py  test_bridge_workspace.py  test_call_model_ptl.py  test_capability.py  test_cli_ca_bundle.py  test_command_registry.py  test_compact.py  test_completion_menu.py  test_config.py  test_config_manager.py  test_context_inject.py  test_delivery.py  test_dream_gate.py  test_dream_lock.py  test_filesystem.py  test_filesystem_media.py  test_goal_hook.py  test_grep_glob_properties.py  test_grep_glob_unit.py  test_hooks_framework.py  test_hooks_integration.py  test_hooks_shell.py  test_human_approval.py  test_is_use_tool_routing.py  test_job.py  test_job_store.py  test_jsonc.py  test_loader.py  test_mcp_config.py  test_memory.py  test_memory_normalize.py  test_message_export.py  test_message_visibility.py  test_migrate_config.py  test_mode_policy.py  (+34 more)
(+345 files in other folders)
