[project]
name = "lumi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.134.0",
    "json-repair>=0.58.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pyyaml>=6.0.3",
    "uvicorn>=0.41.0",
    "wcmatch>=10.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
