[project]
name = "lumi"
version = "0.2.21"
description = "基于 LangGraph 的 AI Agent 框架"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.134.0",
    "json-repair>=0.58.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.4.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.3.0",
    "langgraph>=1.0.9",
    "pyyaml>=6.0.3",
    "uvicorn>=0.41.0",
    "wcmatch>=10.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary]>=3.3.3",
    "apscheduler>=3.11.2",
    "pillow>=12.1.1",
    "rapidfuzz>=3.14.3",
    "typer>=0.24.1",
    "pymupdf>=1.24.0",
    "websockets>=16.0",
    "jsonschema>=4.26.0",
    "lark-oapi>=1.4.0",
    "python-socks>=2.8.2",
]

[project.scripts]
lumi = "lumi.cli:main"

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
# E501(行长) 交给 `ruff format` 统一处理，不作为 lint 错误
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["lumi"]

[tool.uv.sources]
lumi = { workspace = true }
